--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>ChatApp</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type='text/css'>
 </head>
 
 <body>
